[project]
name = "mst-overview"
version = "0.1.0"
description = "Generates the city overview for https://meine-stadt-transparent.de/"
authors = [
    { name = "konstin", email = "konstin@mailbox.org" },
]
dependencies = [
    "Jinja2>=3.1.2,<4.0.0",
    "mkdocs>=1.4.2,<2.0.0",
    "pandas>=2.0.1,<3.0.0",
    "pyyaml>=6.0,<7.0",
]
requires-python = ">=3.8,<4.0"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "black==23.3.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
